able to add new article

--- a/news/templates/all-news/article.html
+++ b/news/templates/all-news/article.html
@@ -13,11 +13,14 @@
    </div>
 
    <div class="row">
-     <p>{{article.post}}</p>
+     {% autoescape on %}
+     {{article.post| safe}}
+    {% endautoescape %}
+
    </div>
 
    <div class="row">
-     <p>Posted {{article.pub_date|timesince}} by {{article.editor.first_name}}</p>
+     <p>Posted {{article.pub_date|timesince}} | {{article.editor.username}}</p>
    </div>
 
  </div>
