newsletter with ajax

--- a/news/templates/all-news/today-news.html
+++ b/news/templates/all-news/today-news.html
@@ -1,5 +1,6 @@
 {%extends 'all-news/base.html'%}
 {% load bootstrap3 %}
+{% load static %}
 {% block content %} 
 {{ block.super}}
 
@@ -38,4 +39,7 @@
   </div>
 </div>
 
+{% endblock %}
+{% block scripts %} {{block.super}}
+  <script type="text/javascript" src="{%static 'js/newsletter.js'%}"></script>
 {% endblock %}
